# tailflow

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  tailflow.example.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/tailflow-core/: Cargo.toml
crates/tailflow-core/src/: config.rs  json.rs  lib.rs
crates/tailflow-core/src/ingestion/: docker.rs  file.rs  mod.rs  process.rs  stdin.rs
crates/tailflow-core/src/processor/: mod.rs
crates/tailflow-core/tests/: bus.rs  config.rs  process_restart.rs  processor.rs
crates/tailflow-daemon/: Cargo.toml
crates/tailflow-daemon/src/: main.rs  routes.rs  state.rs
crates/tailflow-tui/: Cargo.toml
crates/tailflow-tui/src/: app.rs  main.rs
crates/tailflow-tui/src/ui/: mod.rs
homebrew/: tailflow.rb.tmpl
npm/tailflow/: package.json
scripts/: bump-version.js  pack-local.sh
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  types.ts
web/src/components/: LogRow.tsx  Sidebar.tsx
web/src/hooks/: useLogStream.ts
