[workspace]
members = [
    "crates/tailflow-core",
    "crates/tailflow-tui",
    "crates/tailflow-daemon",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["TailFlow Contributors"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
