[package]
name = "tailflow-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Docker socket integration
bollard = "0.18"

# File watching
notify = "7"
notify-debouncer-mini = "0.4"

# Config file parsing
toml = "0.8"

# Async trait support
async-trait = "0.1"
futures-util = "0.3"

# Regex (used in processor)
regex = "1"

[dev-dependencies]
tempfile = "3"
