[package]
name = "tailflow-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tailflow-daemon"
path = "src/main.rs"

[dependencies]
tailflow-core = { path = "../tailflow-core" }

tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP / SSE
axum = { workspace = true }
tower-http = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }

# CLI
clap = { version = "4", features = ["derive"] }

# stdin detection
atty = "0.2"

# Embed the built web UI into the binary
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
