[package]
name = "tailflow-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tailflow"
path = "src/main.rs"

[dependencies]
tailflow-core = { path = "../tailflow-core" }

tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI args
clap = { version = "4", features = ["derive"] }

# Regex filtering
regex = "1"

# stdin detection
atty = "0.2"
